# adguard-tui

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  quick-start.sh
.github/: CHANGELOG.md  README.md
.github/.github/workflows/: push-cargo.yml
.github/workflows/: build-docker.yml  insert-contributors.yml  mirror.yml  publish-docs.yml  push-cargo.yml  release-binaries.yml
src/: fetch.rs  fetch_stats.rs  main.rs  ui.rs  welcome.rs
src/fetch/: fetch_filters.rs  fetch_query_log.rs  fetch_stats.rs  fetch_status.rs  mod.rs
src/widgets/: chart.rs  filters.rs  gauge.rs  list.rs  mod.rs  status.rs  table.rs
