[package]
name = "adwatch-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { package = "ratatui", version = "0.24.0" }
euclid = "0.22.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
chrono = "0.4.39"
crossterm = { version = "0.22.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }